--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "@svg-maps/world": "^1.0.1",
     "@tippyjs/react": "^4.2.6",
     "apexcharts": "^3.49.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.2",
     "cleave.js": "^1.6.0",
     "dayjs": "^1.11.10",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.2",
     "framer-motion": "^11.1.7",
+    "jsonwebtoken": "^9.0.3",
     "leaflet": "^1.9.4",
     "next": "^13.2.4",
+    "pg": "^8.16.3",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -59,8 +63,10 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.9.3"
   }
 }
