--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^11.1.7",
     "jsonwebtoken": "^9.0.3",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.562.0",
     "next": "^13.2.4",
     "pg": "^8.16.3",
     "react": "18.2.0",
